--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,19 @@
   -webkit-text-size-adjust: 100%;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  height: 100%;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
 }
